fixing z-index position

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,6 +74,7 @@ header {
   width: 100%;
   transition: all 0.5s ease;
   animation: smoothScroll 1s forwards;
+  z-index: 9999;
 }
 
 @keyframes smoothScroll {
